# Quiniela-Mundial-2026-Backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 0000_initial_schema.py  0001_add_prediction_deadline_to_matches.py  0002_additive_model_changes.py  0003_data_migration_and_constraints.py  0004_add_fifa_number_to_matches.py
src/: main.py
src/admin/: routers.py
src/auth/: models.py  routers.py  schemas.py  services.py
src/core/: config.py  database.py  dependencies.py  security.py
src/fixtures/: wc2026_matches.json  wc2026_teams.json
src/leaderboard/: routers.py  schemas.py  services.py
src/matches/: models.py  routers.py  schemas.py  services.py
src/predictions/: models.py  routers.py  schemas.py  services.py
src/scoring/: constants.py  engine.py  service.py
src/scripts/: seed_matches.py  seed_teams.py
src/sync/: routers.py  scheduler.py
src/teams/: routers.py  schemas.py  services.py
src/users/: routers.py
